Replace the native-image plan with jlink + jpackage
Task 3 proved cljfx cannot be build-time-initialised (top-level set! in
three namespaces, Platform/startup at load) and that the empty-window
binary already weighed 81.1 MB. The size argument that justified Graal
is gone, so the toolchain goes with it.

Claude-Session: https://claude.ai/code/session_01CsKuxNWssBRF32NKJgHpf8